# nystroem-ksd

./: .gitignore  LICENSE  README.md  pyproject.toml
additional_config/reviewer-3/: run_experiments.sh
lib/random-feature-stein-discrepancies/: setup.py
lib/random-feature-stein-discrepancies/rfsd/experiments/: gof_testing_experiments.py
neurips_rebuttal/reviewer-4/: run_config.sh
scripts/: run_all.sh  run_gof_experiment.py  run_speed_experiment.py
src/nystroem_ksd/: goftest.py
tests/: test_goftest.py
