[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "nystroem_ksd"
version = "0.0.1"
authors = [
  { name="Anonymous Authors", email="anonymous@anon.com" },
]
description = "Code for the article Nyström KSD"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  #"kgof@git+https://github.com/wittawatj/kernel-gof.git",
  #"rfsd@git+https://bitbucket.org/jhhuggins/random-feature-stein-discrepancies.git",
  "pytest",
  "numpy",
  "scikit-learn"
]
